Docker changes y Modbus
Se agrego la libreria modbus serial para el contenedor agente.
Se realizó la integración del proyecto de node a docker y docker-compose.

--- a/historiador-agent/package.json
+++ b/historiador-agent/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "debug": "^4.3.1",
     "defaults": "^1.0.3",
+    "modbus-serial": "^8.0.1",
     "mqtt": "^4.2.6",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
