update docker-compose run node at agent service

--- a/Historiador/docker-compose.yml
+++ b/Historiador/docker-compose.yml
@@ -70,12 +70,12 @@ services:
   
   agent:
     image: christopher57/historiador_image
-    working_dir: /usr/src/app/historiador-agent
+    working_dir: /usr/src/app/historiador-agent/gui
     # cambiar a la ejecucion del servidor web
-    command: "tail -f /dev/null"
+    command: "node server.js"
     ports: 
       - "502:502"
-      - "8081:8081"
+      - "8089:8089"
     volumes:
       - "../historiador-agent/examples:/usr/src/app/historiador-agent/examples"
       - "../historiador-agent/gui:/usr/src/app/historiador-agent/gui"
@@ -129,8 +129,6 @@ services:
     depends_on:
       - mongo
     
-
-
 volumes:
   db-data:
   pgadmin-data:
@@ -139,8 +137,3 @@ volumes:
   noip-etc:
   
   mongodb-data:
-
-  
-
-  
-  
