--- a/Historiador/docker-compose.yml
+++ b/Historiador/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres
     restart: always
     environment:
-      POSTGRES_DB: postgres
+      POSTGRES_DB: Historiador
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: example
       PGDATA: /var/lib/postgresql/data
