--- a/Historiador/docker-compose.yml
+++ b/Historiador/docker-compose.yml
@@ -94,9 +94,9 @@ services:
       - "8000:8000"
       - "502:502"
       
-    volumes:
-      - "../historiador-agent/examples:/usr/src/app/historiador-agent/examples"
-      - "../historiador-agent/gui:/usr/src/app/historiador-agent/gui"
+    # volumes:
+    #   - "../historiador-agent/examples:/usr/src/app/historiador-agent/examples"
+    #   - "../historiador-agent/gui:/usr/src/app/historiador-agent/gui"
     depends_on:
       - mqtt
       - api
