--- a/historiador-agent/gui/package.json
+++ b/historiador-agent/gui/package.json
@@ -45,6 +45,8 @@
     "express-asyncify": "^1.0.1",
     "historiador-agent": "file:../historiador-agent",
     "moment": "^2.29.1",
+    "node-sass": "^7.0.1",
+    "pg": "^8.7.3",
     "random-material-color": "^1.0.5",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
