--- a/historiador-web/package.json
+++ b/historiador-web/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Christopher-Castro/Historiador#readme",
   "devDependencies": {
+    "@voerro/vue-notifications": "^1.0.1",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -51,7 +52,10 @@
     "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4",
     "vue": "^2.6.12",
+    "vue-basic-alert": "^1.1.0",
     "vue-chartjs": "^3.5.1",
+    "vue-notification-ui": "^1.0.4",
+    "vue-notifications": "^1.0.2",
     "vue-router": "^3.5.1"
   }
 }
