--- a/historiador-db/package.json
+++ b/historiador-db/package.json
@@ -35,6 +35,7 @@
     "defaults": "^1.0.3",
     "inquirer": "^7.3.3",
     "minimist": "^1.2.5",
+    "moment": "^2.29.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "psql": "0.0.1",
