--- a/Historiador/docker-compose.yml
+++ b/Historiador/docker-compose.yml
@@ -90,7 +90,7 @@ services:
       DB_HOST: db
       MQTT_HOST: mqtt://mqtt
       API_ENDPOINT: http://api:3000
-      SERVER_HOST: http://localhost:8000
+      # SERVER_HOST: http://localhost:8000
     ports: 
       - "8000:8000"
       - "502:502"
