--- a/Historiador/docker-compose.yml
+++ b/Historiador/docker-compose.yml
@@ -58,15 +58,15 @@ services:
   #   depends_on:
   #     - mongo
 
-  db-setup:
-    image: christopher57/historiador_image
-    working_dir: /usr/src/app/historiador-db
-    command: "node setup.js --yes"
-    environment:
-      DB_HOST: db
-    depends_on:
-      - mongo
-      - db
+  # db-setup:
+  #   image: christopher57/historiador_image
+  #   working_dir: /usr/src/app/historiador-db
+  #   command: "node setup.js --yes"
+  #   environment:
+  #     DB_HOST: db
+  #   depends_on:
+  #     - mongo
+  #     - db
 
   mqtt:
     image: christopher57/historiador_image
@@ -108,8 +108,9 @@ services:
     command: "npm run start-dev"
     environment:
       DB_HOST: db
-    # volumes:
-    #   - "../historiador-api:/usr/src/app/historiador-api"
+    volumes:
+      # - "../historiador-api:/usr/src/app/historiador-api"
+      - "../historiador-db/lib:/usr/src/app/historiador-db/lib"
     ports: 
       - "3000:3000"
     depends_on:
