--- a/Historiador/docker-compose.yml
+++ b/Historiador/docker-compose.yml
@@ -91,6 +91,8 @@ services:
       MQTT_HOST: mqtt://mqtt
       API_ENDPOINT: http://api:3000
       # SERVER_HOST: http://localhost:8000
+    volumes:
+      - "../historiador-agent/gui:/usr/src/app/historiador-agent/gui"
     ports: 
       - "8000:8000"
       - "502:502"
