--- a/Historiador/docker-compose.yml
+++ b/Historiador/docker-compose.yml
@@ -92,7 +92,8 @@ services:
       API_ENDPOINT: http://api:3000
       # SERVER_HOST: http://localhost:8000
     volumes:
-      - "../historiador-agent/gui:/usr/src/app/historiador-agent/gui"
+      - "../historiador-agent/gui/createIp.js:/usr/src/app/historiador-agent/gui/createIp.js"
+      - "../historiador-agent/gui/client:/usr/src/app/historiador-agent/gui/client"
     ports: 
       - "8000:8000"
       - "502:502"
